--- a/pertemuan-3/package.json
+++ b/pertemuan-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pertemuan-3",
+  "name": "Pertemuan-3",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
