--- a/pertemuan-3/app.json
+++ b/pertemuan-3/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "pertemuan-3",
-    "slug": "pertemuan-3",
+    "name": "tugas-2",
+    "slug": "tugas-2",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
